<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="nowplaying"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_now_playing"
        android:shortcutLongLabel="@string/shortcut_now_playing_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.bockmedia.console.MainActivity">
            <extra android:name="route" android:value="#nowplaying" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="playlists"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_playlists"
        android:shortcutLongLabel="@string/shortcut_playlists_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.bockmedia.console.MainActivity">
            <extra android:name="route" android:value="#playlists" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="rooms"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_rooms"
        android:shortcutLongLabel="@string/shortcut_rooms_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.bockmedia.console.MainActivity">
            <extra android:name="route" android:value="#rooms" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.bockmedia.console.MainActivity">
            <extra android:name="route" android:value="#search" />
        </intent>
    </shortcut>

</shortcuts>
